--- a/FlightReservationSystem/LoginPage.resx
+++ b/FlightReservationSystem/LoginPage.resx
@@ -119,14 +119,14 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="UsernameTextBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>169, 155</value>
+    <value>152, 149</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="UsernameTextBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 6, 4, 6</value>
   </data>
   <data name="UsernameTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>208, 31</value>
+    <value>188, 30</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="UsernameTextBox.TabIndex" type="System.Int32, mscorlib">
@@ -145,13 +145,16 @@
     <value>4</value>
   </data>
   <data name="PasswordTextBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>169, 198</value>
+    <value>152, 190</value>
   </data>
   <data name="PasswordTextBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 6, 4, 6</value>
   </data>
+  <data name="PasswordTextBox.PasswordChar" type="System.Char, mscorlib" xml:space="preserve">
+    <value>*</value>
+  </data>
   <data name="PasswordTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>208, 31</value>
+    <value>188, 30</value>
   </data>
   <data name="PasswordTextBox.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -169,13 +172,13 @@
     <value>3</value>
   </data>
   <data name="Login.Location" type="System.Drawing.Point, System.Drawing">
-    <value>193, 250</value>
+    <value>174, 240</value>
   </data>
   <data name="Login.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 6, 4, 6</value>
   </data>
   <data name="Login.Size" type="System.Drawing.Size, System.Drawing">
-    <value>147, 82</value>
+    <value>132, 79</value>
   </data>
   <data name="Login.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -199,13 +202,13 @@
     <value>True</value>
   </data>
   <data name="UsernameLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>385, 162</value>
+    <value>346, 155</value>
   </data>
   <data name="UsernameLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="UsernameLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 24</value>
+    <value>59, 23</value>
   </data>
   <data name="UsernameLabel.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -229,13 +232,13 @@
     <value>True</value>
   </data>
   <data name="PasswordLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>385, 203</value>
+    <value>346, 195</value>
   </data>
   <data name="PasswordLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="PasswordLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>51, 24</value>
+    <value>45, 23</value>
   </data>
   <data name="PasswordLabel.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -259,16 +262,16 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>10, 24</value>
+    <value>9, 23</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>540, 477</value>
+    <value>486, 457</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
-    <value>B Nazanin, 11.25pt, style=Bold</value>
+    <value>B Nazanin, 11.25pt</value>
   </data>
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>10, 13, 10, 13</value>
+    <value>9, 12, 9, 12</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>ورود</value>
